1. Add modal and modal control 2. Implement form functions 3. Change input text and placeholder style 4. Change option style 5. Fixed dropdown icon at select tag invisible issue 6. Remove unnecessary data attributes

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -64,6 +64,9 @@ ul, ol, li {
 .cursor-point {
     cursor: pointer;
 }
+.hidden {
+    display: none;
+}
 
 @mixin col-series($serial) {
     display: flex;
